feat: good bye content layer!

--- a/apps/web/src/content/posts/launch-3.mdx
+++ b/apps/web/src/content/posts/launch-3.mdx
@@ -1,8 +1,9 @@
 ---
-title: Introducing OnlyPrompts 3.0
+title: Introducing OnlyPrompts
 summary: OnlyPrompts enables you to monetize prompts without writing a single line of code.
 author: ian
 createdAt: 2023-10-31
+heroImage: https://images.unsplash.com/photo-1675557009875-436f73db7edf?q=80&w=3540&auto=format&fit=crop
 ---
 
 About half a year ago, we wanted to speed run the many podcasts we enjoy. Like most developers, we thought to ourselves "how hard can that be?", and decided to build [Scribbler](https://scribbler.so), an AI learning tool that automatically transcribes, summarizes, and provides QA over podcasts.
