--- a/apps/web/src/content/posts/launch.mdx
+++ b/apps/web/src/content/posts/launch.mdx
@@ -3,6 +3,7 @@ title: Introducing OnlyPrompts
 summary: OnlyPrompts enables you to monetize prompts without writing a single line of code.
 author: ian
 createdAt: 2023-10-31
+heroImage: https://images.unsplash.com/photo-1677442136019-21780ecad995?q=80&w=3432&auto=format&fit=crop
 ---
 
 About half a year ago, we wanted to speed run the many podcasts we enjoy. Like most developers, we thought to ourselves "how hard can that be?", and decided to build [Scribbler](https://scribbler.so), an AI learning tool that automatically transcribes, summarizes, and provides QA over podcasts.
